--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -2,3 +2,17 @@ h1 {
   font-family: helvetica;
   font-weight: 200;
 }
+
+body {
+  background: #f3f7f8;
+  padding: 30px;
+  font-size: 16px;
+}
+
+.description{
+	padding: 10px;
+}
+
+.header{
+	padding: 5px;
+}
